WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
135458
Fix resource leak in unclosed file descriptor handles
https://bugs.webkit.org/show_bug.cgi?id=135458
Summary
Fix resource leak in unclosed file descriptor handles
przemeks@pkuczynski.com
Reported
2014-07-31 05:37:31 PDT
Leaving descriptor unclosed will cause the resources associated with the open file description never be freed (they are freed on closing the last descriptor referring to the underlying file).
Attachments
proposed patch
(1.69 KB, patch)
2014-07-31 06:05 PDT
,
przemeks@pkuczynski.com
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
przemeks@pkuczynski.com
Comment 1
2014-07-31 06:05:13 PDT
Created
attachment 235823
[details]
proposed patch
WebKit Commit Bot
Comment 2
2014-08-18 14:12:10 PDT
Comment on
attachment 235823
[details]
proposed patch Clearing flags on attachment: 235823 Committed
r172724
: <
http://trac.webkit.org/changeset/172724
>
WebKit Commit Bot
Comment 3
2014-08-18 14:12:13 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug