Fix resource leak in unclosed file descriptor handles https://bugs.webkit.org/show_bug.cgi?id=135458

Patch by Przemyslaw Kuczynski <p.kuczynski@samsung.com> on 2014-08-18
Reviewed by Oliver Hunt.

Leaving descriptor unclosed will cause the resources associated with the open
file description never be freed (they are freed on closing the last descriptor
refering to the underlying file).

* Shared/Plugins/Netscape/x11/NetscapePluginModuleX11.cpp:
(WebKit::StdoutDevNullRedirector::StdoutDevNullRedirector): Closed newStdout descriptor.
(WebKit::StdoutDevNullRedirector::~StdoutDevNullRedirector): Closed m_savedStdout descriptor.

Canonical link: https://commits.webkit.org/153898@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@172724 268f45cc-cd09-0410-ab3c-d52691b4dbfc